# sorrel

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  jsconfig.json
.config/: bacon.toml
.zed/: settings.json
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: index.html  index.js  lexer.rs  lib.rs  main.rs  model.rs  parser.rs  server.rs
crates/stem/: Cargo.toml
crates/stem/src/: lib.rs
crates/stem/src/algorithms/: arabic_stemmer.rs  armenian_stemmer.rs  basque_stemmer.rs  catalan_stemmer.rs  czech_stemmer.rs  danish_stemmer.rs  dutch_porter_stemmer.rs  dutch_stemmer.rs  english_stemmer.rs  esperanto_stemmer.rs  estonian_stemmer.rs  finnish_stemmer.rs  french_stemmer.rs  german_stemmer.rs  greek_stemmer.rs  hindi_stemmer.rs  hungarian_stemmer.rs  indonesian_stemmer.rs  irish_stemmer.rs  italian_stemmer.rs  lithuanian_stemmer.rs  lovins_stemmer.rs  mod.rs  nepali_stemmer.rs  norwegian_stemmer.rs  persian_stemmer.rs  polish_stemmer.rs  porter_stemmer.rs  portuguese_stemmer.rs  romanian_stemmer.rs  russian_stemmer.rs  serbian_stemmer.rs  sesotho_stemmer.rs  spanish_stemmer.rs  swedish_stemmer.rs  tamil_stemmer.rs  turkish_stemmer.rs  yiddish_stemmer.rs
crates/stem/src/snowball/: among.rs  mod.rs  snowball_env.rs
crates/store/: Cargo.toml
src/: cli.rs  error.rs  index.html  index.js  lexer.rs  lib.rs  main.rs  model.rs  parser.rs  prelude.rs  server.rs
