#:schema https://www.schemastore.org/cargo.json

[package]
name = "sorrel"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
lexopt = "0.3"
poppler-rs = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny_http = "0.12"
xml = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# --- Allowed ---
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- Restriction lints (cherry-picked, not in all/pedantic) ---
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
# arbitrary_source_item_ordering       = "deny"
as_conversions = "deny"
as_pointer_underscore = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "deny"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_drop = "deny"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "deny"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "warn"
indexing_slicing = "deny"
infinite_loop = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
large_include_file = "deny"
let_underscore_untyped = "warn"
little_endian_bytes = "warn"
lossy_float_literal = "deny"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "deny"
missing_asserts_for_indexing = "deny"
# missing_inline_in_public_items  = "warn"
mixed_read_write_in_expression = "deny"
# module_name_repetitions         = "deny"
needless_raw_strings = "deny"
non_zero_suggestions = "deny"
panic = "warn"
panic_in_result_fn = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "warn"
precedence_bits = "deny"
# print_stdout                         = "warn"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
self_named_module_files = "deny"
# std_instead_of_alloc                 = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
tests-outside-test-module = "deny"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "allow"
unused_trait_names = "warn"
unwrap_used = "warn"
# verbose_file_reads = "warn"

[lints.rust]
future-incompatible = { level = "warn", priority = -1 }
# --- Safety & correctness ---
nonstandard-style = { level = "warn", priority = -1 }
rust-2018-idioms = { level = "warn", priority = -1 }
unknown-or-malformed-diagnostic-attributes = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

# --- Standalone (no clippy equivalent) ---
ambiguous-negative-literals = "warn"
closure-returning-async-block = "warn"
deref-into-dyn-supertrait = "warn"
ffi-unwind-calls = "warn"  # remove if no FFI
impl-trait-redundant-captures = "warn"
let-underscore-drop = "warn"
macro-use-extern-crate = "deny"
meta-variable-misuse = "deny"
missing-copy-implementations = "warn"
# missing-docs                          = "deny"
non-ascii-idents = "deny"
redundant-imports = "deny"
redundant-lifetimes = "deny"
single-use-lifetimes = "deny"
trivial-casts = "deny"
trivial-numeric-casts = "deny"
unit-bindings = "deny"
unnameable-types = "warn"
unreachable-pub = "warn"
unsafe-code = "warn"
# unused-crate-dependencies     = "warn"
unused-import-braces = "deny"
unused-lifetimes = "warn"
unused-qualifications = "deny"
# unused-results                                = "warn"

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
