[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
lexopt.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tiny_http.workspace = true
tokio.workspace = true
waken_snowball.workspace = true
xml.workspace = true

cli.workspace = true

[lints]
workspace = true
